# REST APIs Implementation/controllers/ReviewsController.js
@@ -60,6 +60,9 @@ module.exports.getSingleReview = function getSingleReview (req, res, next) {
             if (response == 404){
                 utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The review does not exist.' }], }, 404);
             }
+            else if (response == 409){
+              utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The review has been delegated to another user.' }], }, 409);
+            }
             else {
                 utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': response }], }, 500);
             }
@@ -133,11 +136,8 @@ module.exports.updateSingleReview = function updateSingleReview (req, res, next)
         utils.writeJson(res, response, 204);
     })
     .catch(function(response) {
-        if(response == 403){
-            utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The user is not a reviewer of the film or the review has been delegated to another user.' }], }, 403);
-        }
-        else if(response == 409){
-          utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The review has been already completed or the review miss some fields to be checked completed.' }], }, 409);
+        if(response == 409){
+          utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The review has been already completed OR delegated OR the review miss some fields to be checked completed.' }], }, 409);
         }
         else if (response == 404){
             utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The review does not exist.' }], }, 404);
@@ -161,11 +161,8 @@ module.exports.delegateReview = function delegateReview (req, res, next) {
         utils.writeJson(res, response, 201);
     })
     .catch(function(response) {
-        if(response == 403){
-            utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The user is not a reviewer of the film or the review has already been delegated to another user.' }], }, 403);
-        }
-        else if(response == 409){
-          utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The review has been already completed or the user has been already issued or delegated to review this film.' }], }, 409);
+        if(response == 409){
+          utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The review has been already completed OR delegated OR the user with ID delegateId has been already issued or delegated to review this film.' }], }, 409);
         }
         else if (response == 404){
             utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The review does not exist.' }], }, 404);
@@ -185,13 +182,13 @@ module.exports.deleteDelegation = function deleteDelegation (req, res, next) {
     })
     .catch(function (response) {
       if(response == "403"){
-        utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The user is not the invited reviewer of the film' }], }, 403);
+        utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The user is not the delegator of the review.' }], }, 403);
       }
       else if(response == "409"){
-        utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The review has been already completed, so the invitation cannot be deleted anymore.' }], }, 409);
+        utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The review has been already completed, so the delegation cannot be deleted anymore.' }], }, 409);
       }
       else if (response == 404){
-        utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The review does not exist.' }], }, 404);
+        utils.writeJson(res, { errors: [{ 'param': 'Server', 'msg': 'The delegation does not exist.' }], }, 404);
       }
       else {
         utils.writeJson(res, {errors: [{ 'param': 'Server', 'msg': response }],}, 500);
